RESOLVED FIXED166956
[iOS][WK1] Fix initialization of CADisplayLink::preferredFramesPerSecond
https://bugs.webkit.org/show_bug.cgi?id=166956
Summary [iOS][WK1] Fix initialization of CADisplayLink::preferredFramesPerSecond
Said Abou-Hallawa
Reported 2017-01-11 17:49:05 PST
Set this option to 60fps in [WebDisplayLinkHandler initWithMonitor].
Attachments
Patch (1.65 KB, patch)
2017-01-11 17:51 PST, Said Abou-Hallawa
no flags
Said Abou-Hallawa
Comment 1 2017-01-11 17:51:23 PST
WebKit Commit Bot
Comment 2 2017-01-12 09:07:55 PST
Comment on attachment 298644 [details] Patch Clearing flags on attachment: 298644 Committed r210663: <http://trac.webkit.org/changeset/210663>
WebKit Commit Bot
Comment 3 2017-01-12 09:07:59 PST
All reviewed patches have been landed. Closing bug.
Alex Christensen
Comment 4 2017-01-23 09:30:09 PST
An open source builder had issues with this line. preferredFramesPerSecond isn't declared in a public header or our SPI headers. See https://bugs.webkit.org/show_bug.cgi?id=165897
Note You need to log in before you can comment on or make changes to this bug.