[iOS][WK1] Fix initialization of CADisplayLink::preferredFramesPerSecond https://bugs.webkit.org/show_bug.cgi?id=166956

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2017-01-12
Reviewed by Tim Horton.

Set this option to 60fps instead of leaving set to the default.

* platform/graphics/ios/DisplayRefreshMonitorIOS.mm:
(-[WebDisplayLinkHandler initWithMonitor:]):

Canonical link: https://commits.webkit.org/184073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210663 268f45cc-cd09-0410-ab3c-d52691b4dbfc